# hermes-jailbench

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTENT.md  LAUNCH-READY.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPEC.md  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
_launch/: LAUNCH-PLAN.md  SHIP-REPORT.md  claim.md  classification.md  gh-metadata.sh  hygiene-report.md  positioning.md  preship-gate.md  release.sh
_launch/images/: demo-plan.md  prompts.md
_launch/outreach/: blog-post.devto.md  blog-post.md  hn-show.md  linkedin.md  x-thread.md
_launch/outreach/awesome-prs/: README.md
_launch/outreach/reddit/: r-LocalLLaMA.md
_launch/paper/: DECISION.md  abstract.md
assets/: preview-source.txt  preview-spec.md
benchmarks/: README.md
hermes_jailbench/: __init__.py  __main__.py  cli.py  conversation_integrity.py  prescan.py  report.py  scorer.py
jailbreak_bench/: __init__.py  __main__.py  attacks.py  cli.py  conversation_integrity.py  prescan.py  report.py  runner.py
launch/: awesome-list-pr.md  demo-gif-shotlist.md  dev-to.md  linkedin.md  paper-abstract.md  reddit-r-localllama.md  show-hn.md  social-preview.md  x-twitter.md
tests/: test_attacks.py  test_benchmark.py  test_conversation_integrity.py  test_multilingual.py  test_prescan.py  test_scorer.py
